fixed title image covering viewport

--- a/public/dashboard/assets/css/dashboard.css
+++ b/public/dashboard/assets/css/dashboard.css
@@ -945,7 +945,7 @@ div.student_not_found>h2 {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 45vw;
+  height: 100%;
   position: absolute;
   top: 2vw;
   filter: brightness(92%) opacity(0.75);
